--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,114 @@ HERO SECTION */
 }
 
 /* CSS for Candidates Section */
+.candidates-box {
+  gap: 3rem;
+}
+
 .candidate {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  background-color: #fff;
+  border-radius: 1.5rem;
+  padding: 1.5rem 3rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.candidate:hover,
+.candidate:visited {
+  border: 1px solid #3cb371;
+}
+
+.candidate-img {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.candidate-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.candidate-name {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.party-logo {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.btn-cast-vote {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.btn-cast-vote:hover,
+.btn-cast-vote:visited {
+  background-color: #63c28d;
+}
+
+.report-link {
+  color: inherit;
+}
+
+/* ************************
+  CSS for Login Login page
+************************
+*/
+.log-in-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login-box {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem 3rem;
+  background-color: #f9f9f9;
+  border-radius: 1.5rem;
+}
+
+.login-icon {
+  font-size: 4rem;
+  color: #3cb371;
+  padding: 1rem;
+  border-radius: 50%;
   background-color: #e5f5e9;
+}
+
+.login-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.login-textbox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 1rem;
+}
+
+.login-form {
+  width: 100%;
+}
+
+.radio-group {
+  display: flex;
+  gap: 1rem;
 }
