--- a/css/style.css
+++ b/css/style.css
@@ -232,3 +232,109 @@ HERO SECTION */
   display: flex;
   gap: 1rem;
 }
+
+/* ************************
+  CSS for Admin page
+************************
+*/
+.admin-container {
+  margin: 0rem 4rem;
+  height: calc(100vh - 20rem);
+}
+
+.admin-actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  padding: 1rem 2rem;
+  width: 40%;
+  height: 6rem;
+  border-radius: 1.5rem;
+
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.btn-admin-action {
+  width: 100%;
+  /* padding: 1rem; */
+  height: 100%;
+  font-weight: 500;
+  border-radius: 1.5rem;
+  background-color: transparent;
+}
+
+.btn-admin-action:active {
+  background-color: #e5f5e9;
+}
+
+.btn-admin-action.active {
+  background-color: #e5f5e9;
+}
+
+/* Admin Overview */
+.admin-overview {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+
+  /* Remember to update the display property */
+  display: none;
+}
+
+.overview-content {
+  font-size: 1.2rem;
+  width: 100%;
+  background-color: #fff;
+  padding: 2rem 2rem;
+  border-radius: 1.5rem;
+  gap: 1rem;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+}
+
+.overview-content-header {
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+
+.overview-content-count {
+  font-weight: 700;
+  font-size: 2rem;
+}
+.overview-icon {
+  font-size: 2rem;
+  padding: 1rem;
+  border-radius: 50%;
+  background-color: rgba(60, 179, 114, 0.1);
+  color: #3cb371;
+}
+
+/* Admin AI Audit */
+.admin-ai-audit {
+  background-color: #fff;
+  border-radius: 1.5rem;
+  padding: 2rem;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+}
+
+.audit-header {
+  align-items: center;
+  gap: 2rem;
+}
+
+.audit-icon-p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  background-color: rgba(60, 179, 114, 0.1);
+}
+.audit-icon {
+  font-size: 3rem;
+
+  color: #3cb371;
+}
