--- a/css/general.css
+++ b/css/general.css
@@ -36,7 +36,8 @@ Tint:
 Gray Scale:
 -- Light: #f5f5f5
 -- Medium: #eee
--- Dark: #333
+-- Dark: #444
+-- Darker: #222
 
 
 */
@@ -69,6 +70,13 @@ body {
 
 .link:link {
   text-decoration: none;
+}
+
+.btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 1.5rem;
+  font-weight: 500;
 }
 
 .color-text {
@@ -133,11 +141,22 @@ body {
   margin-bottom: 1rem; /* 10px */
 }
 
+/* Grid System */
 .grid {
   display: grid;
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, 1fr);
+}
+
+/* Flex System */
+.flex-row {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 /* COMPONENTS WITH THE SAME PROPERTIES */
