--- a/css/general.css
+++ b/css/general.css
@@ -35,7 +35,7 @@ Tint:
 
 Gray Scale:
 -- Light: #f5f5f5
--- Medium: #eee
+-- Medium: #7e7e7e
 -- Dark: #444
 -- Darker: #222
 
@@ -80,13 +80,18 @@ body {
 }
 
 .color-text {
-  color: #444;
+  color: #6c6c6c;
 }
 
 .color-dark {
   color: #222; /* Dark text */
 }
 
+.primary-heading {
+  font-size: 3.4rem; /* 24px */
+  font-weight: 700; /* Semi-Bold */
+  text-transform: capitalize;
+}
 .secondary-heading {
   font-size: 2.4rem; /* 24px */
   font-weight: 600; /* Semi-Bold */
@@ -100,6 +105,26 @@ body {
 }
 .tertiary-color {
   color: #e5f5e9; /* Tertiary color */
+}
+
+/* TEXT SYSTEM */
+.small-text {
+  font-size: 1.2rem; /* 12px */
+  line-height: 1.05;
+}
+
+.normal-text {
+  font-size: 1.6rem; /* 16px */
+  line-height: 1.2;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.sub-text {
+  line-height: 1.5;
+  width: 90%;
 }
 
 .input {
@@ -167,9 +192,16 @@ body {
 }
 
 .btn-sign-in:hover,
-.btn-register:hover {
+.btn-register:hover,
+.btn-verify-vote:hover,
+.btn-submit-report:hover {
   background-color: #63c28d;
   color: #fff;
+}
+
+.candidates,
+.hero {
+  margin: 0 3rem;
 }
 
 /* FOOTER */
@@ -193,4 +225,16 @@ body {
 .form-group {
   width: 100%;
   margin-bottom: 3rem;
+}
+
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
