--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,21 @@
 /*********************** CSS for Main Header and Navigation **********************
 HEADER
 */
-
 .main-header {
-  background-color: #fff;
-  padding: 2rem 4rem;
+  background-color: #f9f9f9;
+  padding: 0 4rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  /* background-color: #fdf2e9; */
+
+  /* Because we want header to be sticky later */
+  height: 9.6rem;
+  /* padding: 0 4.8rem; */
+  position: relative;
 }
 
 .main-nav {
@@ -36,7 +46,8 @@ HEADER
 
 .main-nav-links-box {
   display: flex;
-  gap: 10rem;
+  justify-content: space-between;
+  gap: 4rem;
 }
 
 .main-nav-link:link,
@@ -89,6 +100,37 @@ HEADER
   color: #000;
 }
 
+/* MOBILE */
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 2rem;
+  width: 2rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
+.icon-mobile-nav[name="menu-outline"] {
+  background-color: #e5f5e9;
+  border: 1px solid rgba(60, 179, 114, 0.2);
+  padding: 1.5rem;
+  border-radius: 1rem;
+}
+
+.main-index {
+  height: calc(100vh - 20rem);
+}
+
 /* *********************** CSS for Hero Section **********************
 HERO SECTION */
 
@@ -100,6 +142,7 @@ HERO SECTION */
   background-color: #d2efde;
   border-radius: 1.5rem;
   border: 1px solid rgba(60, 179, 114, 0.5);
+  margin-bottom: 5rem;
 }
 
 .hero-icon {
@@ -125,15 +168,26 @@ HERO SECTION */
   gap: 3rem;
 }
 
+.candidates {
+  margin-bottom: 5rem;
+}
+
 .candidate {
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 2rem;
+  justify-content: space-between;
+  height: 10rem;
   background-color: #fff;
   border-radius: 1.5rem;
   padding: 1.5rem 3rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.candidate-inner {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
 .candidate:hover,
@@ -142,8 +196,8 @@ HERO SECTION */
 }
 
 .candidate-img {
-  width: 6rem;
-  height: 6rem;
+  width: 7rem;
+  height: 7rem;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -159,8 +213,8 @@ HERO SECTION */
 }
 
 .party-logo {
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -187,16 +241,15 @@ HERO SECTION */
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .login-box {
-  width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
   padding: 2rem 3rem;
+  margin: 0 3rem;
   background-color: #f9f9f9;
   border-radius: 1.5rem;
 }
@@ -239,7 +292,6 @@ HERO SECTION */
 */
 .admin-container {
   margin: 0rem 4rem;
-  height: calc(100vh - 20rem);
 }
 
 .admin-actions {
@@ -277,13 +329,10 @@ HERO SECTION */
   display: flex;
   justify-content: space-between;
   gap: 2rem;
-
-  /* Remember to update the display property */
-  display: none;
 }
 
 .overview-content {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   width: 100%;
   background-color: #fff;
   padding: 2rem 2rem;
@@ -295,13 +344,13 @@ HERO SECTION */
 .overview-content-header {
   align-items: center;
   justify-content: space-between;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 600;
 }
 
 .overview-content-count {
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 2.4rem;
 }
 .overview-icon {
   font-size: 2rem;
@@ -311,30 +360,299 @@ HERO SECTION */
   color: #3cb371;
 }
 
-/* Admin AI Audit */
-.admin-ai-audit {
+/* Admin Feedback */
+.admin-feedback {
+  min-height: 15rem;
   background-color: #fff;
+  padding: 2rem 4rem;
   border-radius: 1.5rem;
-  padding: 2rem;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+  /* Hide by default */
+  display: none;
 }
 
-.audit-header {
+.admin-feedback-header {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.admin-feedback-content {
+  justify-content: center;
+  text-align: center;
+  padding: 2rem 4rem;
+}
+
+/* *********************************
+  CSS for HOW TO VOTE page
+************************************
+*/
+.section-how-to-vote {
+  align-items: center;
+}
+
+.header-how-to-vote {
+  font-size: 1.8rem;
+}
+
+.how-to-vote-box {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 80%;
+  background-color: #f9f9f9;
+  padding: 1rem 2rem;
+  border-radius: 1.5rem;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+  margin: 0 3rem;
+}
+
+.header-accordion-item {
+  padding: 2rem 0;
+  justify-content: space-between;
+}
+
+.accordion-item {
+  border-bottom: 1px solid #d1d1d1;
+}
+
+.header-accordion-item:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.accordion-name-box {
+  gap: 1rem;
+  align-items: center;
+}
+
+.accordion-icon {
+  font-size: 2rem;
+}
+
+.accordion-name {
+  font-size: 1.8rem;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.accordion-icon-up {
+  display: none;
+}
+
+.accordion-item-detail {
+  font-size: 2rem;
+  display: none;
+  padding: 0 4rem;
+  transition: display 0.5s ease;
+}
+
+/* About Candidate */
+.section-about-candidate {
+  align-items: center;
+}
+
+.header-about-candidate {
+  margin: 0 3rem;
+  font-size: 1.8rem;
+}
+
+.about-candidate-container {
+  gap: 3rem;
+}
+
+.about-candidate {
+  width: 42rem;
+  padding: 1.5rem 3rem;
+  background-color: #f9f9f9;
+  border-radius: 1.5rem;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+  border: 1px solid #d1d1d1;
+}
+
+.candidate-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 8.5rem;
+  height: 8.5rem;
+  background-color: #d1d1d1;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.candidate-name-box {
   align-items: center;
   gap: 2rem;
 }
 
-.audit-icon-p {
+.candidate-party {
+  font-size: 1.6rem;
+}
+
+.candidate-detail {
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+/* ************************
+  CSS for Verify Vote page
+*************************/
+.section-verify-vote {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* height: 80vh; */
+}
+
+.verify-vote-outer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.verify-vote-inner {
+  max-width: 60rem;
+  margin: 0 3rem;
+  background-color: #f9f9f9;
+  padding: 1rem 2rem;
+  border-radius: 1.5rem;
+  text-align: center;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+}
+
+.header-verify {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.verify-vote-icon-box {
+  font-size: 1.4rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 5rem;
-  height: 5rem;
+  height: 7rem;
+  width: 7rem;
   border-radius: 50%;
   background-color: rgba(60, 179, 114, 0.1);
 }
-.audit-icon {
-  font-size: 3rem;
+.verify-vote-icon {
+  color: #3cb371;
+  font-size: 3.6rem;
+}
 
+.verify-text-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.verify-vote-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.verify-vote-label {
+  align-self: start;
+}
+
+.btn-verify-vote {
+  width: 100%;
+  font-size: 1.6rem;
+  background-color: #3cb371;
+  padding: 1.5rem;
+  color: #fff;
+}
+
+/* ************************
+  CSS for Results page
+************************************
+*/
+.section-results {
+  margin: 0 3rem;
+  padding: 2rem 2rem;
+  background-color: #f9f9f9;
+  border-radius: 1.5rem;
+  height: 60vh;
+}
+
+.result-display {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.result-icon {
+  font-size: 3.6rem;
+}
+
+.vote-count {
+  font-weight: 600;
+  font-size: 1.8rem;
+  color: #3cb371;
+}
+
+.results-header {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.results-list {
+  list-style: none;
+  padding: 0;
+}
+
+.results-item {
+  padding: 1rem 2rem;
+  border-bottom: 1px solid #eee;
+}
+
+.results-item:last-child {
+  border-bottom: none;
+}
+
+.results-item .candidate-name {
+  font-weight: bold;
+}
+
+.results-item .candidate-votes {
+  color: #666;
+}
+
+/* ************************
+  CSS for REPORT PAGE
+************************************
+*/
+.section-reports {
+  width: 100%;
+}
+
+.report {
+  padding: 1.5rem;
+  border: 1px solid #eee;
+  border-radius: 1rem;
+  background-color: #e5f5e9;
+  border: 1px solid rgba(60, 179, 114, 0.2);
+}
+
+.btn-submit-report {
+  width: 100%;
+  font-size: 1.6rem;
+  background-color: #3cb371;
+  padding: 1.5rem;
+  color: #fff;
+}
+
+.report-link:hover {
   color: #3cb371;
 }
