--- a/css/general.css
+++ b/css/general.css
@@ -173,6 +173,9 @@ body {
 .grid-cols-2 {
   grid-template-columns: repeat(2, 1fr);
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
 
 /* Flex System */
 .flex-row {
