--- a/css/queries.css
+++ b/css/queries.css
@@ -117,6 +117,10 @@
 
   /* HOME PAGE */
 
+  .section-election-select {
+    flex-direction: column !important;
+  }
+
   /* CANDIDATES (Mobile view) */
   .candidates-box {
     grid-template-columns: 1fr !important;
